tests/paczka1/small_fuzzy/37090720.err
Error in line 2: BG4 A856 32,5
Error in line 4: mOMwl5 A856 50,9
